Update blog content to

--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 ---
 layout: default
-title: Home
+title: "#7languages7weeks Challenge Repository &amp; Blog"
 ---
 <p>
-This is a boilerplate for use in <a href="http://pages.github.com/">Github Pages</a>.
-It is based on <a href="http://html5boilerplate.com">The HTML5 Boilerplate</a>, and
-comes with <a href="http://jquery.org">jQuery</a> and
-<a href="http://960.gs">text.css from 960.gs</a>. Octocat icon from
-<a href="http://designmoo.com/3466/github-icons/">designmoo</a>.
+This blog will document my journey through the #7languages7weeks challenge.
+Embarked upon by people signing up for [@sermoa](http://twitter.com/sermoa)'s 
+[blog post](http://sermoa.wordpress.com/2011/06/10/7-languages-in-7-weeks/).
+I am one of those people, [@SusanPotter](http://twitter.com/SusanPotter).
 </p>
 <h2>Instructions</h2>
 <ol>
  <li>fork this repo
- <li>rename this repo to <em>user</em>.github.com
  <li>edit <code>_config.yml</code>
  <li>edit <code>index.html</code>
  <li>edit <code>_includes/style.css</code>
- <li>navigate to <em>user</em>.github.com and enjoy
+ <li>navigate to <em>user</em>.github.com/7languages7weeks and continue editing 
+ the blog content each day you work through the book.
 </ol>
 <hr>
 <section>
